# build_tests-cmake-rock_install_python_bindings

./: CMakeLists.txt  README.md  manifest.xml
bindings/python/: CMakeLists.txt  _rock_install_python_bindings.pxd  rock_install_python_bindings.pyx  setup.py.in
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  Main.cpp
test/: CMakeLists.txt  test_Dummy.cpp
test/bindings/python/: test.py
